package com.ims.backend.entity.enums;

public enum ClaimStatus {
    FILED, UNDER_REVIEW, APPROVED, REJECTED, SETTLED
}
