package com.ims.backend.entity.enums;

public enum InsuranceType {
    LIFE, HEALTH, MOTOR, HOME
}
