package com.ims.backend.entity.enums;

public enum PaymentStatus {
    DUE, PAID, OVERDUE
}
