package com.ims.backend.entity.enums;

public enum PolicyStatus {
    PENDING, ACTIVE, REJECTED, EXPIRED, CANCELLED
}
