package com.ims.backend.entity.enums;

public enum Role {
    ADMIN, AGENT, CUSTOMER
}
